borré texto de parrafo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -74,9 +74,7 @@
             facere consequuntur, ratione temporibus doloremque at deserunt
             itaque doloribus architecto dolore placeat dignissimos est possimus
             saepe exercitationem molestias cumque rerum inventore fugiat a
-            voluptatem reprehenderit quam voluptatibus? Ratione, eveniet, et
-            saepe aspernatur quos aut sunt molestiae modi impedit laborum a
-            ipsum!
+            voluptatem reprehenderit quam voluptatibus?
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.10237077753!2d-65.20939048545098!3d-26.8366960965006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses!2sar!4v1626786794137!5m2!1ses!2sar" class="w-100 mb-2" height="350" allowfullscreen="" loading="lazy"></iframe>
           </div>
           <div class="col-sm-12 col-md-6">
