--- a/pages/historia.html
+++ b/pages/historia.html
@@ -7,12 +7,132 @@
     <meta name="description" content="Panaderia Cocu" />
     <meta name="keywords" content="panaderia cocu facturas pan masitas" />
     <meta name="author" content="Andy Garcia" />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/9a02cb5bab.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/9a02cb5bab.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Panaderia Cocu</title>
   </head>
   <body>
-    <script src="js/bootstrap.min.js"></script>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="../index.html">
+            <img
+              src="../img/cocu_logo-450.png"
+              alt="logo panaderia cocu"
+              width="120"
+              height="100"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarPanaderiaCocu"
+            aria-controls="navbarPanaderiaCocu"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarPanaderiaCocu">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="historia.html"
+                  >Historia</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="producto.html">Producto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="container my-3">
+        <h1 class="display-2 text-center">Nuestra historia</h1>
+        <hr />
+        <article class="row">
+          <aside class="col-sm-12 col-md-6">
+            <h3 class="display-6">Lorem, ipsum dolor.</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ab
+              consequatur dolor voluptatibus! Qui quo earum a vel recusandae nam
+              dolorem eum voluptate laboriosam nihil sed provident iste vero
+              nobis facilis ipsum explicabo quae numquam, minus iure doloribus
+              quos! Exercitationem reprehenderit ea accusamus corrupti
+              recusandae fugit, officia veniam, ducimus, voluptatum perferendis
+              nam assumenda. Doloremque, aspernatur. Laborum praesentium magnam
+              necessitatibus quas ex inventore neque, deleniti, assumenda
+              temporibus quia, modi pariatur! Excepturi esse aspernatur dicta
+              suscipit minus? Vitae itaque architecto nemo suscipit, porro
+              laboriosam amet. Labore architecto nostrum nesciunt in similique
+              veritatis laboriosam facere voluptates repellendus ab. Autem
+              quisquam animi sunt iure. Ad, ea. Facere corrupti ipsam deserunt,
+              voluptas tempore non, cumque, consectetur veniam inventore dolorem
+              laborum repudiandae laboriosam odit aperiam atque neque odio
+              provident? Nesciunt quis corporis natus, quisquam, quo porro odit
+              quod soluta cum expedita eaque corrupti magnam, tempora molestias
+              laborum aperiam suscipit aliquid incidunt eligendi tenetur ducimus
+              ullam sequi.
+            </p>
+          </aside>
+          <aside class="col-sm-12 col-md-6">
+            <img class="w-100" src="../img/historia.png" alt="" />
+          </aside>
+        </article>
+      </section>
+    </main>
+    <footer class="text-white bg-dark py-3 px-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-2 centradoResponsive">
+            <img
+              src="../img/cocu_logo-450.png"
+              alt="logo panaderia cocu"
+              width="140"
+              height="120"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-5">
+            <p>Horarios de atención:</p>
+            <ul>
+              <li>Lunes a Viernes: 09hs-18hs</li>
+              <li>Sábados, Domingos y feriados: 09hs-14hs</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-5">
+            <p>Seguinos en nuestras redes:</p>
+            <div class="centradoResponsive">
+              <a class="text-secondary mx-2" target="_blank" href="">
+                <i class="fab fa-facebook-square fa-2x"></i
+              ></a>
+              <a class="text-secondary mx-2" target="_blank" href="">
+                <i class="fab fa-instagram-square fa-2x"></i
+              ></a>
+              <a class="text-secondary mx-2" target="_blank" href="">
+                <i class="fab fa-twitter-square fa-2x"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="../js/bootstrap.min.js"></script>
   </body>
+</html>
